// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Pipeline Deployment list should render deployment list 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody main"
  >
    <div
      class="StyledProps--font StyledProps--main spinner StyledProps--flex StyledProps--flex-align-center-center"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main content"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
        >
          <svg
            height="32"
            viewBox="0 0 128 128"
            width="32"
          >
            <g>
              <path
                d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                fill="#ff8e02"
              />
              <path
                d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                fill="#ffddb3"
                fill-opacity="0.3"
              />
              <path
                d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                fill="#ffd29a"
                fill-opacity="0.4"
              />
              <path
                d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                fill="#ffc680"
                fill-opacity="0.5"
              />
              <path
                d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                fill="#ffbb67"
                fill-opacity="0.6"
              />
              <path
                d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                fill="#ffb04d"
                fill-opacity="0.7"
              />
              <path
                d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                fill="#ffa535"
                fill-opacity="0.8"
              />
              <path
                d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                fill="#ff991b"
                fill-opacity="0.9"
              />
              <animatetransform
                attributeName="transform"
                calcMode="discrete"
                dur="1200ms"
                repeatCount="indefinite"
                type="rotate"
                values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
              />
            </g>
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
        >
          Loading, please wait...
        </p>
      </div>
    </div>
    <div
      class="main"
    >
      <div
        class="lhs"
      >
        <button
          class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <defs>
                <path
                  d="M7.2 10.6V5.4L10.6 8l-3.4 2.6zm4.4-3.3L7.4 4.1c-.3-.2-.6-.2-.9-.1-.3.2-.5.5-.5.8v6.4c0 .3.2.6.5.8.3.1.6.1.9-.1l4.2-3.2c.2-.2.3-.4.3-.7s-.1-.5-.3-.7zm1.1 5.4c-2.2 2.2-5.7 2.6-8.4.8s-3.6-5.1-2.4-8c1.2-2.9 4.3-4.6 7.4-4 3.1.6 5.3 3.3 5.3 6.5.1 1.8-.6 3.4-1.9 4.7zm2.7-7.8C13.8 1.1 9.6-.9 5.7.4 1.7 1.6-.7 5.6.2 9.6s4.5 6.8 8.6 6.4c4.1-.4 7.2-3.8 7.2-8 0-1.1-.2-2.1-.6-3.1z"
                  id="run-pipeline_svg__a"
                />
              </defs>
              <clippath
                id="run-pipeline_svg__b"
              >
                <use
                  overflow="visible"
                  xlink:href="#run-pipeline_svg__a"
                />
              </clippath>
              <path
                clip-path="url(#run-pipeline_svg__b)"
                d="M-5-5h26v26H-5z"
                fill="#54b610"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            <span
              class="runText"
            >
              Run Pipeline
            </span>
          </span>
        </button>
        <div
          class="filterGroup btnGroup"
        >
          <span
            class="label"
          >
            Deployments
          </span>
          <div
            class="StyledProps--font StyledProps--main ButtonGroup--btnGroup"
          >
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <span>
                  All
                </span>
              </span>
            </button>
            <button
              class="bp3-button bp3-disabled StyledProps--font Button--button Button--iconOnly StyledProps--main"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                My
              </span>
            </button>
          </div>
        </div>
        <div
          class="filterGroup"
        >
          <span
            class="label"
          >
            Status
          </span>
          <div
            class="bp3-popover-wrapper"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <button
                  class="bp3-button main"
                  data-testid="status-select"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    <span>
                      All
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-down"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search"
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon"
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="Search"
            type="search"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card card"
      >
        <div
          class="icons"
          data-cd="false"
          data-ci="false"
        />
        <div>
          <div
            class="content"
          >
            <div>
              <a
                class="title"
                href="/account/testAcc/cd/orgs/testOrg/projects/testProject/pipelines/http_pipeline/executions/IcZLrBrkR8a32AM_wxiE9A/pipeline"
              >
                <span
                  class="pipelineName"
                >
                  http_pipeline
                </span>
                <span
                  class="executionId"
                >
                  (Execution ID: IcZLrBrkR8a32AM_wxiE9A)
                </span>
              </a>
            </div>
            <div
              class="main"
            >
              <div
                class="graphWrapper"
              >
                <div
                  class="graph"
                >
                  <div
                    class="stage"
                    data-status="failed"
                  >
                    <span
                      class="bp3-icon bp3-icon-error StyledProps--main icon"
                      icon="error"
                    >
                      <svg
                        data-icon="error"
                        height="13"
                        viewBox="0 0 16 16"
                        width="13"
                      >
                        <desc>
                          error
                        </desc>
                        <path
                          d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="stepCounts"
              >
                <div
                  class="stepCount"
                  data-status="success"
                >
                  <span
                    class="bp3-icon bp3-icon-tick-circle StyledProps--main"
                    icon="tick-circle"
                  >
                    <svg
                      data-icon="tick-circle"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <desc>
                        tick-circle
                      </desc>
                      <path
                        d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  0
                   / 
                  0
                </div>
                <div
                  class="stepCount"
                  data-status="failed"
                >
                  <span
                    class="bp3-icon bp3-icon-error StyledProps--main"
                    icon="error"
                  >
                    <svg
                      data-icon="error"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <desc>
                        error
                      </desc>
                      <path
                        d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                   
                  1
                </div>
              </div>
            </div>
            <div
              class="actions"
            >
              <span
                class="StyledProps--font StyledProps--main status failed StyledProps--inline StyledProps--font-weight-bold StyledProps--font-size-xsmall"
              >
                FAILED
              </span>
              <div
                class="main"
              >
                <button
                  class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-repeat StyledProps--main"
                    icon="repeat"
                  >
                    <svg
                      data-icon="repeat"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        repeat
                      </desc>
                      <path
                        d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-more StyledProps--main"
                        icon="more"
                      >
                        <svg
                          data-icon="more"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            more
                          </desc>
                          <path
                            d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="footer"
          >
            <div
              class="triggerInfo"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline"
                style="display: inline-flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-user StyledProps--main StyledProps--padding-right-xsmall"
                  icon="user"
                >
                  <svg
                    data-icon="user"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      user
                    </desc>
                    <path
                      d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                Admin
              </span>
              <span
                class="triggerType"
              >
                Manually
              </span>
            </div>
            <div
              class="timers"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline"
                style="display: inline-flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-time StyledProps--main StyledProps--padding-right-xsmall"
                  icon="time"
                >
                  <svg
                    data-icon="time"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      time
                    </desc>
                    <path
                      d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                Duration: 
                21s
              </span>
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline"
                style="display: inline-flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--padding-right-xsmall"
                  icon="calendar"
                >
                  <svg
                    data-icon="calendar"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      calendar
                    </desc>
                    <path
                      d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <time
                  datetime="2021-01-13T08:53:13.932Z"
                  title="2021-01-13 08:53"
                >
                  3 months from now
                </time>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pagination"
    >
      <div
        class="Layout--horizontal StyledProps--main Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
      >
        <span
          class="StyledProps--font StyledProps--main Pagination--text StyledProps--inline"
        >
          Showing 
          <strong>
            1
          </strong>
           of 
          <strong>
            1
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Pipeline Deployment list should render deployment list with pipeline filter 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody main"
  >
    <div
      class="StyledProps--font StyledProps--main spinner StyledProps--flex StyledProps--flex-align-center-center"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main content"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
        >
          <svg
            height="32"
            viewBox="0 0 128 128"
            width="32"
          >
            <g>
              <path
                d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                fill="#ff8e02"
              />
              <path
                d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                fill="#ffddb3"
                fill-opacity="0.3"
              />
              <path
                d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                fill="#ffd29a"
                fill-opacity="0.4"
              />
              <path
                d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                fill="#ffc680"
                fill-opacity="0.5"
              />
              <path
                d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                fill="#ffbb67"
                fill-opacity="0.6"
              />
              <path
                d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                fill="#ffb04d"
                fill-opacity="0.7"
              />
              <path
                d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                fill="#ffa535"
                fill-opacity="0.8"
              />
              <path
                d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                fill="#ff991b"
                fill-opacity="0.9"
              />
              <animatetransform
                attributeName="transform"
                calcMode="discrete"
                dur="1200ms"
                repeatCount="indefinite"
                type="rotate"
                values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
              />
            </g>
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
        >
          Loading, please wait...
        </p>
      </div>
    </div>
    <div
      class="main"
    >
      <div
        class="lhs"
      >
        <button
          class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <defs>
                <path
                  d="M7.2 10.6V5.4L10.6 8l-3.4 2.6zm4.4-3.3L7.4 4.1c-.3-.2-.6-.2-.9-.1-.3.2-.5.5-.5.8v6.4c0 .3.2.6.5.8.3.1.6.1.9-.1l4.2-3.2c.2-.2.3-.4.3-.7s-.1-.5-.3-.7zm1.1 5.4c-2.2 2.2-5.7 2.6-8.4.8s-3.6-5.1-2.4-8c1.2-2.9 4.3-4.6 7.4-4 3.1.6 5.3 3.3 5.3 6.5.1 1.8-.6 3.4-1.9 4.7zm2.7-7.8C13.8 1.1 9.6-.9 5.7.4 1.7 1.6-.7 5.6.2 9.6s4.5 6.8 8.6 6.4c4.1-.4 7.2-3.8 7.2-8 0-1.1-.2-2.1-.6-3.1z"
                  id="run-pipeline_svg__a"
                />
              </defs>
              <clippath
                id="run-pipeline_svg__b"
              >
                <use
                  overflow="visible"
                  xlink:href="#run-pipeline_svg__a"
                />
              </clippath>
              <path
                clip-path="url(#run-pipeline_svg__b)"
                d="M-5-5h26v26H-5z"
                fill="#54b610"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            <span
              class="runText"
            >
              Run Pipeline
            </span>
          </span>
        </button>
        <div
          class="filterGroup btnGroup"
        >
          <span
            class="label"
          >
            Deployments
          </span>
          <div
            class="StyledProps--font StyledProps--main ButtonGroup--btnGroup"
          >
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <span>
                  All
                </span>
              </span>
            </button>
            <button
              class="bp3-button bp3-disabled StyledProps--font Button--button Button--iconOnly StyledProps--main"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                My
              </span>
            </button>
          </div>
        </div>
        <div
          class="filterGroup"
        >
          <span
            class="label"
          >
            Status
          </span>
          <div
            class="bp3-popover-wrapper"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <button
                  class="bp3-button main"
                  data-testid="status-select"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    <span>
                      All
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-down"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="filterGroup"
        >
          <span
            class="label"
          >
            Pipelines
          </span>
          <div
            class="bp3-popover-wrapper"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <button
                  class="bp3-button main"
                  data-testid="pipeline-select"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    <span>
                      All
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-down"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search"
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon"
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="Search"
            type="search"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card card"
      >
        <div
          class="icons"
          data-cd="false"
          data-ci="false"
        />
        <div>
          <div
            class="content"
          >
            <div>
              <a
                class="title"
                href="/account/testAcc/cd/orgs/testOrg/projects/testProject/pipelines/http_pipeline/executions/IcZLrBrkR8a32AM_wxiE9A/pipeline"
              >
                <span
                  class="pipelineName"
                >
                  http_pipeline
                </span>
                <span
                  class="executionId"
                >
                  (Execution ID: IcZLrBrkR8a32AM_wxiE9A)
                </span>
              </a>
            </div>
            <div
              class="main"
            >
              <div
                class="graphWrapper"
              >
                <div
                  class="graph"
                >
                  <div
                    class="stage"
                    data-status="failed"
                  >
                    <span
                      class="bp3-icon bp3-icon-error StyledProps--main icon"
                      icon="error"
                    >
                      <svg
                        data-icon="error"
                        height="13"
                        viewBox="0 0 16 16"
                        width="13"
                      >
                        <desc>
                          error
                        </desc>
                        <path
                          d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="stepCounts"
              >
                <div
                  class="stepCount"
                  data-status="success"
                >
                  <span
                    class="bp3-icon bp3-icon-tick-circle StyledProps--main"
                    icon="tick-circle"
                  >
                    <svg
                      data-icon="tick-circle"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <desc>
                        tick-circle
                      </desc>
                      <path
                        d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  0
                   / 
                  0
                </div>
                <div
                  class="stepCount"
                  data-status="failed"
                >
                  <span
                    class="bp3-icon bp3-icon-error StyledProps--main"
                    icon="error"
                  >
                    <svg
                      data-icon="error"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <desc>
                        error
                      </desc>
                      <path
                        d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                   
                  1
                </div>
              </div>
            </div>
            <div
              class="actions"
            >
              <span
                class="StyledProps--font StyledProps--main status failed StyledProps--inline StyledProps--font-weight-bold StyledProps--font-size-xsmall"
              >
                FAILED
              </span>
              <div
                class="main"
              >
                <button
                  class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-repeat StyledProps--main"
                    icon="repeat"
                  >
                    <svg
                      data-icon="repeat"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        repeat
                      </desc>
                      <path
                        d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-more StyledProps--main"
                        icon="more"
                      >
                        <svg
                          data-icon="more"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            more
                          </desc>
                          <path
                            d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
          <div
            class="footer"
          >
            <div
              class="triggerInfo"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline"
                style="display: inline-flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-user StyledProps--main StyledProps--padding-right-xsmall"
                  icon="user"
                >
                  <svg
                    data-icon="user"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      user
                    </desc>
                    <path
                      d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                Admin
              </span>
              <span
                class="triggerType"
              >
                Manually
              </span>
            </div>
            <div
              class="timers"
            >
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline"
                style="display: inline-flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-time StyledProps--main StyledProps--padding-right-xsmall"
                  icon="time"
                >
                  <svg
                    data-icon="time"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      time
                    </desc>
                    <path
                      d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                Duration: 
                21s
              </span>
              <span
                class="StyledProps--font StyledProps--main StyledProps--inline"
                style="display: inline-flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--padding-right-xsmall"
                  icon="calendar"
                >
                  <svg
                    data-icon="calendar"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      calendar
                    </desc>
                    <path
                      d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <time
                  datetime="2021-01-13T08:53:13.932Z"
                  title="2021-01-13 08:53"
                >
                  3 months from now
                </time>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pagination"
    >
      <div
        class="Layout--horizontal StyledProps--main Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
      >
        <span
          class="StyledProps--font StyledProps--main Pagination--text StyledProps--inline"
        >
          Showing 
          <strong>
            1
          </strong>
           of 
          <strong>
            1
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;
